package com.iljaknk.Game.app_data;

public enum Move_type
{
    NONE, NORMAL, JUMP
}
